Fix heading/button spacing on Safari (and IE).

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -78,13 +78,21 @@ body a:visited:not(.button) {
 
 h2 {
   display: flex;
-  gap: 1rem;
   align-items: center;
+}
+
+h2 .button {
+  margin-left: 1rem;
 }
 
 @media (max-width: 20rem) {
   h2 {
     flex-direction: column;
+  }
+
+  h2 .button {
+    margin-left: 0;
+    margin-top: 1rem;
   }
 }
 
